@@ -45,7 +45,9 @@
 
 #define IPMI_SEL_PARSE_RESERVATION_ID_RETRY   4
 
-#define IPMI_SEL_PARSE_FLAGS_MASK           (IPMI_SEL_PARSE_FLAGS_DEBUG_DUMP)
+#define IPMI_SEL_PARSE_FLAGS_MASK                    \
+  (IPMI_SEL_PARSE_FLAGS_DEBUG_DUMP                   \
+   | IPMI_SEL_PARSE_FLAGS_ASSUME_SYTEM_EVENT_RECORDS)
 
 #define IPMI_SEL_PARSE_SEPARATOR_STRING     " | "
 
